--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,17 +1,16 @@
-ul.nice-menu li {
+ul.nav li {
  -moz-animation-name: shrink;
- -moz-animation-duration: 0.5s;
+ -moz-animation-duration: 1s;
  -moz-animation-timing-function: ease-in-out;
  -webkit-animation-name: shrink;
- -webkit-animation-duration: 0.5s;
+ -webkit-animation-duration: 1s;
  -webkit-animation-timing-function: ease-in-out;
  list-style-type: none;
- line-height: 2.0;
+ 
+ 
 }
- 
 
- 
-ul.nice-menu li:hover {
+ul.nav li:hover {
  width: 200px;
  padding-left: 20px;
  -moz-animation-name: expand;
@@ -22,21 +21,56 @@ ul.nice-menu li:hover {
  -webkit-animation-timing-function: ease-in-out;
 }
 
- 
-ul.nice-menu a {
+ul.nav a {
  font-size: 30px;
  width: 200px;
  text-decoration: none;
- line-height: 2.0;
+ 
  font-size: 30px;
  color: #FFF;
- text-shadow: 0px 0px 3px #333;
- font-weight: bold;
  position: absolute;
  padding: 5px 0px;
  padding-left: 20px;
  list-style-type: none;
- 
- 
+ margin-top: 0;
+ padding-top: 0;
 }
+
+.nav ul li a {
+		display: block;
+		padding: 0.5em 1.5em 0.5em 1.5em;
+		color: rgba(255, 255, 255, 0.5);
+		text-decoration: none;
+		outline: 0;
+		border: 0;
+		-moz-transition: none;
+		-webkit-transition: none;
+		-ms-transition: none;
+		transition: none;
+	}
+
+		.nav ul li a span {
+			position: relative;
+			display: block;
+			font-size: 0.8em;
+		}
+
+			.nav ul li a span:before {
+				position: absolute;
+				left: 0;
+				color: #41484c;
+				text-align: center;
+				width: 1.25em;
+				line-height: 1.75em;
+			}
+
+		.nav ul li a.active {
+			background: rgba(0, 0, 0, 0.15);
+			box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
+			color: #fff;
+		}
+
+			.nav ul li a.active span:before {
+				color: #e27689;
+			}
 
