--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
     src: url(../media/lato.ttf);
    }
     body {
+        max-width: 1600px;
+        min-width: 320px;
         margin: 0 auto;
+        padding: 0;
         font-family: "Lato";
      }
     .header {
@@ -12,17 +15,33 @@
        height: 570px;
        padding:50px 0px;
        background-size: 100% 100%;
+       
     }
     h1 {
-        margin-top: 80px;
+        margin-top: 0%;
+        margin-left: 0%;
+        margin-bottom: 0%;
+        margin-right: 20%;
+        padding-left: 0%;
+        float: right;
         
     }
     .logo {
         color: white;
         font-size: 100px;
         font-weight: 100;
-        margin-left: 700px;
         text-decoration:none;
        
     }
+    .container2 {
+        background-color: black;
+        width: 300px;
+        height: 450px;
+        margin-top: 0%;
+        opacity: 0.6;
+        
+    }
     
+a:hover{
+	color: #FFF8AF;
+}
