--- a/css/button.css
+++ b/css/button.css
@@ -56,7 +56,7 @@ h2 {
   box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
 }
 #toggle + label:after {
-  content: url(/media/sun1.png);
+  content: url(../media/sun1.png);
   font: normal 18px/1 'FontAwesome';
   text-decoration: inherit;
 }
