--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
     }
     .logo {
         color: white;
-        font-size: 100px;
+        font-size: 300%;
         font-weight: 100;
         text-decoration:none;
        
